--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 <h1>
     Welcome to Ukraine
 </h1>
+<footer>
+    This project was coded by Karyna Mikhieienko and is <a href="https://github.com/karina-mi/ukraine-travel-project"
+target="_blank">
+    open sourced
+</a>
+</footer>
 </body>
 </html>
