added the header of the landing page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
             rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Welcome to Ukraine</title>
+    <title>Welcome to Kyiv</title>
 </head>
 <body>
-<h1>
-    Welcome to Ukraine
-</h1>
-<footer>
-    This project was coded by Karyna Mikhieienko and is <a href="https://github.com/karina-mi/ukraine-travel-project"
-target="_blank">
-    open sourced
-</a>
-</footer>
+<div class="container">
+    <header>
+        <h3>.TRAVEL.</h3>
+        <h1>
+            Welcome to Kyiv
+        </h1>
+        <h2>Capital city of Ukraine</h2>
+        <a href="#">Learn more</a>
+    </header>
+    <footer>
+        This project was coded by Karyna Mikhieienko and is <a href="https://github.com/karina-mi/ukraine-travel-project"
+                                                               target="_blank">
+        open sourced
+    </a>
+    </footer>
+</div>
 </body>
 </html>
