--- a/index.html
+++ b/index.html
@@ -22,10 +22,46 @@
         <a href="#">Learn more</a>
     </header>
     <footer>
-        This project was coded by Karyna Mikhieienko and is <a href="https://github.com/karina-mi/ukraine-travel-project"
-                                                               target="_blank">
-        open sourced
-    </a>
+        <section class="grid">
+            <div>
+                <h3>
+                    More about Kyiv
+                </h3>
+                <ul>
+                    <li>
+                        <a href="https://kbp.aero/en/" target="_blank">Kyiv Airport website </a>
+                    </li>
+                    <li>
+                        <a href="https://maps.app.goo.gl/V2jKRGCL4G5U5rSn9" target="_blank">
+                            Map of Kyiv</a>
+                    </li>
+                    <li>
+                        <a href="https://www.visitkievukraine.com/transport/metro/map/" target="_blank">
+                            Public transport map</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>About me</h3>
+                <p>
+                    Hi! My name is Karyna, and I've been living in Kyiv for several
+                    years. I'm very fond of the city. I created this page as part of a
+                    project for SheCodes Responsive to develop my coding skills.
+                </p>
+            </div>
+            <div>
+                <h3>About this website</h3>
+                <p>
+                    I created this page as part of a project for SheCodes Responsive
+                    to develop my coding skills.
+                    <br />
+                    This project was coded by Karyna Mikhieienko and is <a href="https://github.com/karina-mi/ukraine-travel-project"
+                                                                           target="_blank">
+                    open sourced
+                </a>
+                </p>
+                </div>
+        </section>
     </footer>
 </div>
 </body>
