--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
         <h2>Capital city of Ukraine</h2>
         <a href="#">Learn more</a>
     </header>
+    <main>
+        <section class="grid grid-2-columns">
+            <div>
+                <img src="../PROJECT/images/Depositphotos_7368867_xl-2015.jpg" class="img-responsive">
+            </div>
+            <div>
+                <h2>Why Kyiv?</h2>
+                <h3>The city is known for its religious architecture and historical museums.</h3>
+                <p>
+                    Kyiv, the capital of Ukraine, is a city rich in cultural heritage and historical significance.
+                    It boasts numerous museums, theaters, and landmarks such as the Kyiv Pechersk Lavra and St.
+                    Sophia Cathedral. These sites highlight the city's deep-rooted history and its pivotal role in Eastern European culture.
+                <p> Moreover, Kyiv is home to some of the country's top educational institutions, offering high-quality education and research
+                    opportunities. This makes the city an attractive destination for students and academics alike.
+
+                </p>
+            </div>
+        </section>
+    </main>
     <footer>
-        <section class="grid">
+        <section  class="grid grid-3-columns-with-first-narrow">
             <div>
                 <h3>
                     More about Kyiv
