--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section class="grid grid-2-columns">
             <div>
-                <img src="../PROJECT/images/Depositphotos_7368867_xl-2015.jpg" class="img-responsive">
+                <img src="/PROJECT/images/Depositphotos_7368867_xl-2015.jpg" class="img-responsive">
             </div>
             <div>
                 <h2>Why Kyiv?</h2>
