--- a/index.html
+++ b/index.html
@@ -39,6 +39,94 @@
                 </p>
             </div>
         </section>
+        <section class="secondary">
+            <h2 class="text-center">Cafes</h2>
+            <h3 class="text-center">My favorite cafes in Kyiv</h3>
+
+            <div class="grid grid-3-columns">
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/3b-cafe.jpg" class="img-responsive">
+                    </div>
+                    <div class="card-body">
+                        <h4>3B Cafe</h4>
+                        <p>
+                            3bc facilities are created by people, for people! With us, you will see that a BURGER is not fast food,
+                            it is a way of life, that STEAKS can always be cooked correctly, BEER is diverse and unique, and MUSIC matches
+                            your mood!
+                        </p>
+                        <h5>Address:</h5>
+                        <p>St. Khoryva, 23</p>
+                        <h5>What I like about it</h5>
+                        <p>3B Cafe is a place that is perfect for celebrating multifaceted events!</p>
+                    </div>
+                    <div class="card-footer">
+                        <a
+                                href="https://maps.app.goo.gl/wZYKvAYcpqdRSTx38"
+                                class="btn"
+                                target="_blank"
+                        >
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/caption.jpg" class="img-responsive">
+                    </div>
+                    <div class="card-body">
+                        <h4>Cuba Coffee Brew Bar</h4>
+                        <p>
+                            There is a coffee-bar ""Cuba Coffee Brew"" in Shevchenkivskyi district of the capital, on Shevchenka lane, near the metro station
+                            “Maidan Nezalezhnosti”. Original interior is made in eclectic style: brick masonry and Very spacious!
+                        </p>
+                        <h5>Address:</h5>
+                        <p>st. Sofievskaya, 1/2</p>
+                        <h5>What I like about it</h5>
+                        <p> Great place right in the city center. Pleasant staff,
+                            delicious cuisine.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a
+                                href="https://maps.app.goo.gl/rW1Mj3mvTxNT5v7n8"
+                                class="btn"
+                                target="_blank"
+                        >
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/front-wall.jpg" class="img-responsive">
+                    </div>
+                    <div class="card-body">
+                        <h4>Cafe Fandom</h4>
+                        <p>
+                            In the center of Kyiv on Vladimirskaya, there is a cafe “Fandom Coffee Bar”.
+                            Minimalism and classic luxury - original marble fences, a “floating”
+                            console table without supports, carved stucco on the ceiling.
+                        </p>
+                        <h5>Address:</h5>
+                        <p>Vladimirskaya, 01-001, 49a</p>
+                        <h5>What I like about it</h5>
+                        <p>
+                            Great place right in the city center. Pleasant staff,
+                            delicious cuisine.
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a
+                                href="https://maps.app.goo.gl/ajPhCqEZsW2q6LqMA"
+                                class="btn"
+                                target="_blank"
+                        >
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section  class="grid grid-3-columns-with-first-narrow">
