added Google maps embed

--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
 
             <div class="grid grid-3-columns">
                 <div class="card">
-                    <div class="card-header">
-                        <img src="images/3b-cafe.jpg" class="img-responsive">
+                    <div class="card-header grid grid-2-columns">
+                        <img src="images/3b.jpg" class="img-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.6291304962924!2d30.515714600000003!3d50.4666305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce6ac92170bb%3A0x35d2cca12562f36b!2s3B%20Cafe!5e0!3m2!1sru!2sus!4v1716778296770!5m2!1sru!2sus"
+                                class="embed"
+                                style="border:0;"
+                                allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="card-body">
                         <h4>3B Cafe</h4>
@@ -71,8 +76,13 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header grid grid-2-columns ">
                         <img src="images/caption.jpg" class="img-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.4621132029524!2d30.5214704!3d50.4511189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce5089f983db%3A0xf7c9eda16cb8a3ca!2z0YPQuy4g0KHQvtGE0LjQtdCy0YHQutCw0Y8sIDEvMiwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1716779069767!5m2!1sru!2sus"
+                                class="embed"
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="card-body">
                         <h4>Cuba Coffee Brew Bar</h4>
@@ -97,8 +107,14 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header">
-                        <img src="images/front-wall.jpg" class="img-responsive">
+                    <div class="card-header grid grid-2-columns">
+                        <img src="images/fre.jpeg" class="img-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10162.643885302332!2d30.5142538!3d50.4474153!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce582d2d938f%3A0xd5ef941b0632543b!2sFandom!5e0!3m2!1sru!2sus!4v1716779164268!5m2!1sru!2sus"
+                                class="embed"
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="card-body">
                         <h4>Cafe Fandom</h4>
